--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <title>React App</title>
   </head>
   <body>
+    <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
     <div id="root"></div>
     <!--
       This HTML file is a template.
